--- a/index.html
+++ b/index.html
@@ -26,80 +26,13 @@
                 <div class="light"></div>
             </div>
             <div class="screen">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In voluptates iusto accusantium omnis. Animi
-                explicabo excepturi a iste quasi perferendis sunt inventore vero ea qui! Reiciendis, quisquam impedit!
-                Distinctio, dolore debitis. Sequi, harum ex laboriosam cupiditate, libero, ipsa sunt voluptate quis
-                cumque minus optio labore sed ea quam corrupti. Facilis culpa ipsa inventore facere earum error ab ea
-                neque corporis adipisci quidem voluptatum explicabo, quis esse, amet commodi. Similique natus recusandae
-                laborum voluptatibus fuga quas cupiditate ad animi beatae, id, repudiandae, ullam numquam neque. Non,
-                est voluptatum. Officiis enim in dignissimos architecto eius blanditiis laborum exercitationem
-                consequatur aliquid aperiam, atque possimus itaque consectetur ut laboriosam porro ratione perspiciatis!
-                Nemo aliquam maxime itaque modi magni rem veniam illum, sit impedit soluta neque, eaque architecto
-                facere alias assumenda omnis et quia? Quo iure magni modi nihil ipsam laudantium ab, libero nesciunt
-                similique tempora totam. Quasi harum blanditiis laboriosam facilis eius nemo, iure numquam voluptates.
-                Ad, quod est possimus qui similique repudiandae quis aliquam voluptas mollitia omnis voluptatem maxime
-                officiis corrupti iure expedita! Dolor perspiciatis facere nulla, dicta illum incidunt corporis impedit
-                ut molestiae autem et exercitationem cupiditate odio deserunt harum cumque repellat, a praesentium
-                suscipit labore possimus. Facilis maiores, ea nam voluptate vel unde voluptatum. Maxime unde debitis
-                cumque dignissimos eligendi quibusdam, distinctio excepturi magnam quam, necessitatibus quo soluta
-                aliquam voluptatem ducimus magni! At eveniet quidem id, illo sint itaque! Eveniet, illo aspernatur natus
-                rerum a, ea consectetur, esse ipsa odit quos consequatur optio eaque nemo maxime facere! Error vel
-                inventore dignissimos tenetur voluptas voluptates eius quisquam libero voluptatibus nobis repellendus
-                illo sint blanditiis ab tempora ea cupiditate molestiae magnam, quia reiciendis ratione dolorem eos
-                placeat incidunt! Quaerat rem ab incidunt iusto inventore enim itaque aliquam sit labore, vel beatae aut
-                accusantium vero? Tempore officia neque consequatur eius suscipit? Quibusdam illo quia atque repudiandae
-                non, harum magnam qui nemo hic minima soluta sapiente animi repellat nesciunt! Delectus optio ex
-                molestiae non sit, quasi maiores quod nulla quam vel ducimus doloribus corrupti laboriosam inventore
-                facere minima ea sed unde ipsa aperiam ut odio natus? Dolorem fuga velit eligendi exercitationem
-                accusamus? Eius soluta, et cupiditate aspernatur voluptate reprehenderit ut voluptatum perspiciatis
-                fugit sequi blanditiis fuga inventore in iste repellendus eaque. Eum saepe doloribus deserunt amet at,
-                tenetur dolorum eligendi assumenda temporibus sit non alias excepturi fugit illo tempore error? Quod
-                dignissimos magnam sapiente. At recusandae iure totam eum eos veniam quos ipsum. Quam vitae, officiis ad
-                quo harum porro necessitatibus facere expedita dolores inventore autem itaque? Labore similique
-                cupiditate ipsum. Ipsum repudiandae id tenetur! Facere at optio ducimus voluptatum placeat molestiae
-                neque recusandae laborum eum! Voluptatum alias praesentium odio, asperiores inventore ab. In magnam
-                repudiandae rem dicta? Nostrum nam exercitationem nobis sequi, officia cumque modi perferendis
-                recusandae iure praesentium voluptate facilis commodi corporis quaerat, adipisci minima pariatur, sunt
-                dolorem suscipit similique dolor non reiciendis rerum? Sint ducimus eaque harum sed. Placeat odit magni
-                deserunt? Voluptatem amet sunt similique recusandae nostrum et ipsum labore culpa doloremque, minus
-                harum commodi aliquam eos dolor? Nostrum officia ea sint, culpa molestiae rerum, dignissimos quam
-                deserunt dolorum qui velit alias, architecto ducimus eos consectetur quasi corrupti sapiente vero! Eum
-                veniam quis autem possimus ducimus dolore. Vero vel aspernatur asperiores ad quam ratione, quia quasi
-                provident? Suscipit unde error maxime, quia repudiandae pariatur aperiam velit eaque saepe quos mollitia
-                distinctio, impedit doloribus ea accusamus eum non expedita asperiores dolore ab. Perspiciatis qui at
-                obcaecati sit consequuntur magni blanditiis. Incidunt neque iure quos quia enim deserunt, quas eius amet
-                voluptatibus aliquid. Excepturi, nemo maxime sed at magnam modi ducimus id similique aliquid distinctio,
-                deserunt iste voluptatem possimus debitis aperiam officia nobis nisi expedita a ab deleniti corporis
-                voluptate neque. Ipsa nam ea placeat repellat laboriosam illum quia corporis beatae blanditiis itaque
-                animi, eum libero nulla? Unde, cum. Veritatis quae dicta nisi laudantium saepe cum aspernatur. Illo
-                expedita ipsam deleniti cumque quidem mollitia assumenda tempore sit fugit, perferendis soluta
-                voluptatum? Quisquam reiciendis optio nulla similique enim minus deleniti voluptatum id, quibusdam
-                voluptatem fugiat sint saepe recusandae libero modi dolore, molestias vitae mollitia dolorem dolorum
-                iure minima. Nemo repudiandae, a expedita distinctio doloribus assumenda libero delectus eos ab,
-                pariatur molestiae magnam dolorum alias temporibus, consectetur esse optio recusandae accusantium error
-                minima velit. Eaque ab officia quaerat obcaecati libero minus, modi, accusantium labore iure optio
-                soluta sunt maxime enim nobis dignissimos? Quis nostrum tenetur cupiditate quibusdam sint. Delectus qui,
-                molestias laboriosam id quo accusantium ad, consequuntur sequi officia odio aut. Error, facere? Iure
-                asperiores possimus consectetur? Quas necessitatibus voluptates reiciendis nam sunt neque dolores
-                voluptatum pariatur deserunt tempora nesciunt aspernatur velit illum repellendus quam nihil sint rem
-                commodi odit quis totam minus, perferendis dolorum. Id veritatis quas ipsam quam iure ex. Odit eligendi
-                pariatur id aspernatur ad? Aspernatur accusantium rem iusto deserunt, illum consectetur quas, mollitia
-                vel consequuntur animi ipsam fuga dolore amet nihil ratione excepturi, hic a voluptas quis enim eius at
-                voluptatibus soluta! Eum tempora dignissimos autem consequatur fugit velit quae odio in sed! Ratione
-                esse deleniti possimus tempora! Debitis voluptates veritatis recusandae alias numquam, explicabo
-                expedita maiores voluptatum ipsum vero assumenda quasi nostrum et repudiandae modi corporis voluptatem
-                provident pariatur. Officia dignissimos hic magni sit, debitis voluptas iusto ducimus mollitia quae.
-                Nemo beatae quasi, qui vitae, earum iure minima corporis facilis, maiores molestiae error omnis! Ab
-                eligendi enim aperiam. Temporibus, officiis quidem. Quidem itaque minima, ducimus totam nisi rem vero
-                qui. Nostrum neque deleniti quisquam enim cumque eaque, recusandae, earum qui odit accusamus optio. Et
-                voluptatum modi sunt tempora aspernatur, eius sint, omnis quam culpa deleniti iure magnam facere eos
-                veniam aperiam impedit maxime a fuga, tempore iste eligendi perferendis! Quam veniam obcaecati corrupti
-                dolorum harum reiciendis nobis aut, quisquam corporis, facere provident fugit mollitia recusandae neque
-                praesentium non. Debitis ea delectus quos neque explicabo reiciendis ex nesciunt exercitationem laborum
-                quam quae suscipit reprehenderit deleniti obcaecati quia eius distinctio eligendi praesentium ullam
-                sint, amet sapiente harum nobis adipisci! Ipsam vero eveniet, numquam reprehenderit, modi inventore
-                quasi corporis repellendus sunt placeat fuga exercitationem magnam quam voluptate, accusamus odio ipsum
-                sit ipsa nostrum.
+                <div class="intro">
+                    <h1>I am Lawrence</h1>
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Deserunt tempore incidunt quo at quidem
+                        esse quae a eveniet recusandae numquam!
+                    </h2>
+                </div>
             </div>
 
             <div class="homeBtn"></div>
