--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
             </div>
             <div class="screen">
                 <div class="intro">
-                    <h1>I am Lawrence</h1>
-                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Deserunt tempore incidunt quo at quidem
-                        esse quae a eveniet recusandae numquam!
+                    <h1>Hi! I'm Lawrence</h1>
+                    <h2>I build new products and maintain existing ones.
                     </h2>
                 </div>
             </div>
