--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="screen">
                 <div class="intro">
-                    <h1><span id="wave">👋 </span>I'm Lawrence</h1>
+                    <h1><span id="wave">👋 </span>Hi! I'm Lawrence</h1>
                     <h2>I build new products and maintain existing ones.
                     </h2>
                 </div>
